--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   },
   "resolutions": {
     "rails_admin/@fortawesome/fontawesome-free": "^5.15.0"
+  },
+  "engines": {
+    "node": "20.9.0"
   }
 }
