nodeダウングレード

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "rails_admin/@fortawesome/fontawesome-free": "^5.15.0"
   },
   "engines": {
-    "node": "20.9.0"
+    "node": "16.x"
   }
 }
