--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@popperjs/core": "^2.11.8",
     "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
