--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
-    "@rails/webpacker": "5.4.4",
     "bootstrap": "^5.3.2",
+    "esbuild": "^0.19.5",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
-    "rails_admin": "3.1.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
@@ -19,5 +19,8 @@
   },
   "engines": {
     "node": "16.x"
-  }
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/application.js --bundle --outfile=app/assets/builds/application.js"
+}
 }
