--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,4 @@ test:
 #
 production:
   <<: *default
-  database: myapp_production
-  username: myapp
-  password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['JAWSDB_URL'] %>
